data/all_generated_tests/raw_wast_tests/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3828.wast
;; 7. **Trigger Traps in Imported Function**:    - **Description**: Call an imported function designed to intentionally trigger a trap (e.g., divide by zero) and verify that the calling module handles the trap correctly without malfunctioning.    - **Constraint**: Proper trap handling mechanisms must be validated.    - **Relation**: Ensures that traps in an imported function result in intended behavior without stack corruption.

(assert_invalid
  (module
    (import "env" "imported_fn" (func $imported_fn (param i32) (result i32)))
    (func $test_trap (result i32)
      (call $imported_fn (i32.div_s (i32.const 1) (i32.const 0)))
    )
  )
  "type mismatch"
)